--- a/css/style.css
+++ b/css/style.css
@@ -537,14 +537,14 @@ textarea{
         
     }
     /*section 1 */
-    .nosotros{
+    .empresa{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         font-family: 'Josefin Sans', sans-serif;  
     }
-    .nosotros p{
+    .empresa p{
         text-align: center;
         margin: 5px;
     }
