--- a/css/style.css
+++ b/css/style.css
@@ -1569,7 +1569,7 @@ textarea{
         font-weight: 900;
         font-size: 2em;
         text-align: center;
-        text-decoration: underline 5px;
+        text-decoration: ;
     }
 
     input, textarea{
