--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ section-padding
     max-width: 22rem;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: black 4px 3px 10px;
+    box-shadow: black 3px 3px 10px;
   }
   #portfolio .portfolio-item .portfolio-link {
     position: relative;
@@ -91,7 +91,7 @@ section-padding
     height: 50vh;
   }
 
-  /*color sobre imagen*/
+  /*color sobre imeagen*/
 
   #portfolio .portfolio-item .portfolio-link .portfolio-hover {
     display: flex;
@@ -461,16 +461,17 @@ form h2{
 }
 
 input, textarea{
-    width: 250px;
+    width: 500px;
     margin-bottom: 20px;
     padding: 7px;
     box-sizing: border-box;
     font-size: 17px;
-    
-    margin-left: 8%;
 }
 textarea{
+    min-height: 100px;
+    max-height: 200px;
     max-width: 100%;
+    
     color: rgb(0, 0, 0);
     font-weight: 900;
     border: none;
@@ -635,10 +636,9 @@ textarea{
 
     form h2{
         color: white;
-        margin-top: 4%;
-        margin-bottom: 4%;
+        margin-top: 3%;
         font-weight: 900;
-        font-size: 1.5em;
+        font-size: 2em;
         text-align: center;
         text-decoration: none;
     }
@@ -649,14 +649,13 @@ textarea{
         padding: 7px;
         box-sizing: border-box;
         font-size: 17px;
-        margin-left: 5%;
     }
     textarea{
         max-width: 100%;
+        margin-left: 8%;
         color: rgb(0, 0, 0);
         font-weight: 900;
         border: none;
-        margin-left: 11%;
     }
 
     .boton-form{
@@ -664,9 +663,9 @@ textarea{
         background-color: white;
         padding: 15px;
         font-weight: 900;
-        margin-left: 25%;
-        margin-bottom: 2%;
-        width: 50%;
+        margin-left: 7%;
+        text-align: center;
+        width: 79.5%;
     }
 
     .boton-form:hover{
@@ -844,10 +843,10 @@ textarea{
         padding: 7px;
         box-sizing: border-box;
         font-size: 17px;
-        margin-left: 8%;
     }
     textarea{
         max-width: 100%;
+        margin-left: 8%;
         color: rgb(0, 0, 0);
         font-weight: 900;
         border: none;
@@ -1271,7 +1270,8 @@ textarea{
 
     .navbar-dark .navbar-nav .nav-link {
         color: #FFFFFF;
-        font-family: 'Josefin Sans', sans-serif;;
+        font-family: 'Josefin Sans', sans-serif;
+        
     }
     .navbar-nav{
         width: 52%;
@@ -1712,9 +1712,7 @@ textarea{
 
         
     }
-    .sabias img{
-
-    }
+    
     .sabias p{
         text-align: center;
         margin: 2px;
@@ -1844,8 +1842,11 @@ textarea{
         color:#daf3f3;
         background-image: linear-gradient(to right bottom, #080b0b, #122b2a, #114a46, #0b6c61, #09907a);
     }
-    
-    h5 {
+    .a{color: #f3f5f7;
+    text-decoration: underline;}
+
+
+    .h5 {
         font-size: 1.25rem;
         color: white;
     }
